# whisper-srt

./: .gitignore  CHANGELOG.md  LICENSE  MATCH_ALGORITHM.md  Makefile  README.md  VAD_TUNING_GUIDE.md  pyproject.toml  requirements.txt
whisper_srt/: __init__.py  batch.py  cli.py  compare.py  processor.py  utils.py
